--- a/packages/create-electron/template/vanilla/src/index.html
+++ b/packages/create-electron/template/vanilla/src/index.html
@@ -21,76 +21,35 @@
         <li class="v8-version"></li>
       </ul>
 
-      <svg viewBox="0 0 900 300">
-        <use xlink:href="./icons.svg#electron" />
-      </svg>
-
-      <h2>You've successfully created an Electron project</h2>
-
-      <p class="desc">Please try pressing <code>F12</code> to open the devTool</p>
-
-      <p class="desc">
-        What features are being added to the project to help you develop, build and pack Electron
-        app
+      <img class="hero-logo" src="./icons.svg" />
+      <h2 class="hero-text">You've successfully created an Electron project</h2>
+      <p class="hero-tagline">Please try pressing <code>F12</code> to open the devTool</p>
+      <p class="hero-tagline">This is the simplest starter for Electron without any build tools</p>
+      <p class="hero-tagline">
+        You can check out the links to learn more about Electron build tools
       </p>
 
-      <div class="features">
-        <ul>
-          <li>
-            <p>
-              ● Use
-              <a target="_blank" href="https://eslint.org/docs/user-guide/getting-started"
-                >ESLint</a
-              >
-              and <a target="_blank" href="https://prettier.io">Prettier</a> to better lint and
-              style your code, help you to write high-quality code.
-            </p>
-          </li>
-          <li>
-            <p>
-              ● Use
-              <a target="_blank" href="https://github.com/alex8088/electron-vite">electron-vite</a>
-              , a fast build tooling integrated with
-              <a target="_blank" href="https://vitejs.dev">Vite</a>, and you don't need to worry about
-              configuration.
-            </p>
-          </li>
-          <li>
-            <p>
-              ● Use
-              <a target="_blank" href="https://github.com/alex8088/electron-toolkit"
-                >electron-toolkit</a
-              >
-              that make you easy to develop. For example: TSconfigs extends, expose common Electron
-              APIs to renderers in preload scripts and effective utils for the main process.
-            </p>
-          </li>
-          <li>
-            <p>
-              ● Use <a target="_blank" href="https://www.electron.build">electron-builder</a> and
-              preset common configuration, allows you to easily pack Electron app.
-            </p>
-          </li>
-          <li>
-            <p>● More instructions are available in README.md.</p>
-          </li>
-        </ul>
+      <div class="links">
+        <div class="link-item">
+          <a target="_blank" href="https://evite.netlify.app">electron-vite</a>
+        </div>
+        <div class="link-item link-dot">•</div>
+        <div class="link-item">
+          <a
+            target="_blank"
+            href="https://github.com/alex8088/quick-start/tree/master/packages/create-electron"
+          >
+            create-electron
+          </a>
+        </div>
       </div>
 
-      <p class="footer">
-        See
-        <a
-          target="_blank"
-          href="https://github.com/alex8088/quick-start/blob/master/packages/create-electron"
-          >create-electron</a
-        >
-        for more details on each supported template:
-        <br />
+      <p class="hero-tagline">More templates:</p>
+      <p class="hero-tagline line-spacing">
         <code>vanilla</code>, <code>vanilla-ts</code>, <code>vue</code>, <code>vue-ts</code>,
         <code>react</code>, <code>react-ts</code>, <code>svelte</code>, <code>svelte-ts</code>
       </p>
     </div>
-
     <script src="./renderer.js"></script>
   </body>
 </html>
