--- a/packages/create-electron/template/vanilla/src/style.css
+++ b/packages/create-electron/template/vanilla/src/style.css
@@ -6,7 +6,6 @@ body {
     'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
   color: #86a5b1;
   background-color: #2f3241;
-  line-height: 1.5;
 }
 
 * {
@@ -20,7 +19,7 @@ ul {
 
 code {
   font-weight: 600;
-  padding: 4px 5px;
+  padding: 3px 5px;
   border-radius: 2px;
   background-color: #26282e;
   font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
@@ -30,22 +29,29 @@ code {
 a {
   color: #9feaf9;
   font-weight: 600;
-  padding: 0 5px;
-  border-radius: 2px;
   cursor: pointer;
   text-decoration: none;
   outline: none;
 }
 
 a:hover {
-  background-color: #26282e;
+  border-bottom: 1px solid;
 }
 
 .container {
   flex: 1;
   display: flex;
   flex-direction: column;
-  margin: 15px 30px;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 15px 30px 0 30px;
+  box-sizing: border-box;
+}
+
+@media (min-width: 840px) {
+  .container {
+    width: 100%;
+  }
 }
 
 .versions {
@@ -56,6 +62,7 @@ a:hover {
   font-family: 'Menlo', 'Lucida Console', monospace;
   color: #c2f5ff;
   line-height: 1;
+  transition: all 0.3s;
 }
 
 .versions li {
@@ -71,28 +78,72 @@ a:hover {
   border: none;
 }
 
-h2 {
-  text-align: center;
-  margin-bottom: 10px;
-  margin-top: -1.4rem;
+.hero-logo {
+  margin-top: -0.4rem;
+  transition: all 0.3s;
+}
+
+@media (max-width: 840px) {
+  .versions {
+    display: none;
+  }
+
+  .hero-logo {
+    margin-top: -1.5rem;
+  }
+}
+
+.hero-text {
   font-weight: 400;
   color: #c2f5ff;
-}
-
-.desc {
   text-align: center;
+  margin-top: -0.5rem;
   margin-bottom: 10px;
 }
 
-.features {
-  background-color: rgba(194, 245, 255, 0.1);
-  box-sizing: border-box;
-  border-radius: 3px;
-  padding: 8px;
-  user-select: none;
+@media (max-width: 660px) {
+  .hero-logo {
+    display: none;
+  }
+
+  .hero-text {
+    margin-top: 20px;
+  }
 }
 
-.footer {
+.hero-tagline {
   text-align: center;
-  margin-top: 10px;
+  margin-bottom: 14px;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 24px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.links a {
+  font-weight: 500;
+}
+
+.links .link-item {
+  padding: 0 4px;
+}
+
+@media (max-width: 480px) {
+  .links {
+    flex-direction: column;
+    line-height: 32px;
+  }
+
+  .links .link-dot {
+    display: none;
+  }
+}
+
+.line-spacing {
+  line-height: 2;
 }
