fix(create-electron): dead links

--- a/packages/create-electron/template/vanilla-ts/src/renderer/index.html
+++ b/packages/create-electron/template/vanilla-ts/src/renderer/index.html
@@ -59,7 +59,7 @@
             <h2 class="title">HMR</h2>
             <p class="detail">
               Edit <span>src/renderer</span> files to test HMR. See
-              <a target="_blank" href="https://evite.netlify.app/guide/hmr-in-renderer.html">docs</a
+              <a target="_blank" href="https://evite.netlify.app/guide/hmr.html">docs</a
               >.
             </p>
           </article>
