chore(create-electron): electron-vite.org is online

--- a/packages/create-electron/template/vanilla/src/index.html
+++ b/packages/create-electron/template/vanilla/src/index.html
@@ -31,7 +31,7 @@
 
       <div class="links">
         <div class="link-item">
-          <a target="_blank" href="https://evite.netlify.app">electron-vite</a>
+          <a target="_blank" href="https://electron-vite.org">electron-vite</a>
         </div>
         <div class="link-item link-dot">•</div>
         <div class="link-item">
