--- a/packages/create-electron/template/vanilla-ts/src/renderer/index.html
+++ b/packages/create-electron/template/vanilla-ts/src/renderer/index.html
@@ -27,7 +27,7 @@
 
       <div class="links">
         <div class="link-item">
-          <a target="_blank" href="https://evite.netlify.app">Documentation</a>
+          <a target="_blank" href="https://electron-vite.org">Documentation</a>
         </div>
         <div class="link-item link-dot">•</div>
         <div class="link-item">
@@ -50,7 +50,7 @@
             <h2 class="title">Configuring</h2>
             <p class="detail">
               Config with <span>electron.vite.config.ts</span> and refer to the
-              <a target="_blank" href="https://evite.netlify.app/config/">config guide</a>.
+              <a target="_blank" href="https://electron-vite.org/config">config guide</a>.
             </p>
           </article>
         </div>
@@ -59,7 +59,7 @@
             <h2 class="title">HMR</h2>
             <p class="detail">
               Edit <span>src/renderer</span> files to test HMR. See
-              <a target="_blank" href="https://evite.netlify.app/guide/hmr.html">docs</a
+              <a target="_blank" href="https://electron-vite.org/guide/hmr.html">docs</a
               >.
             </p>
           </article>
@@ -69,7 +69,7 @@
             <h2 class="title">Hot Reloading</h2>
             <p class="detail">
               Run <span>'electron-vite dev --watch'</span> to enable. See
-              <a target="_blank" href="https://evite.netlify.app/guide/hot-reloading.html">docs</a>.
+              <a target="_blank" href="https://electron-vite.org/guide/hot-reloading.html">docs</a>.
             </p>
           </article>
         </div>
@@ -78,7 +78,7 @@
             <h2 class="title">Debugging</h2>
             <p class="detail">
               Check out <span>.vscode/launch.json</span>. See
-              <a target="_blank" href="https://evite.netlify.app/guide/debugging.html">docs</a>.
+              <a target="_blank" href="https://electron-vite.org/guide/debugging.html">docs</a>.
             </p>
           </article>
         </div>
@@ -87,7 +87,7 @@
             <h2 class="title">Source Code Protection</h2>
             <p class="detail">
               Supported via built-in plugin <span>bytecodePlugin</span>. See
-              <a target="_blank" href="https://evite.netlify.app/guide/source-code-protection.html">
+              <a target="_blank" href="https://electron-vite.org/guide/source-code-protection.html">
                 docs
               </a>
               .
